--- a/src/main/resources/examples/org/optimizationBenchmarking/utils/tools/impl/latex/test-book.tex
+++ b/src/main/resources/examples/org/optimizationBenchmarking/utils/tools/impl/latex/test-book.tex
@@ -1,17 +1,17 @@
-\documentclass{article}%
+\documentclass{book}%
 %
 %
 \gdef\printFont{\fontname\font}%
 %
 \begin{document}%
 %
-\title{A Test Document to Detect the Page Size and Fonts of the ``article'' Document Class}%
+\title{A Test Document to Detect the Page Size and Fonts of the ``book'' Document Class}%
 \author{Thomas Weise}%
 %
 \maketitle%
 %
 %
-\section{Size}%
+\chapter{Size}%
 %
 \begin{itemize}%
 \item text height: \the\textheight%
@@ -19,7 +19,7 @@
 \item column width: \the\columnwidth%
 \end{itemize}%
 %
-\section{Fonts}%
+\chapter{Fonts}%
 %
 \begin{itemize}%
 %
@@ -60,7 +60,7 @@
 %
 \end{itemize}%
 %
-\section{Available Commands}%
+\chapter{Available Commands}%
 %
 \makeatletter%
 \begin{itemize}%
