--- a/_posts/2015-06-28-release-0.8.1.md
+++ b/_posts/2015-06-28-release-0.8.1.md
@@ -9,7 +9,7 @@ Less than one month after the initial release of the first [alpha version](https
 we are happy to announce the second [alpha version](https://github.com/optimizationBenchmarking/optimizationBenchmarking/releases/tag/v0.8.1)
 of our *optimizationBenchmarking.org* evaluator.
 
-You can download it from the main [repository]({{ site.baseurl }}/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.1/index.html), which includes a stand-alone binary, or from [GitHub](https://github.com/optimizationBenchmarking/optimizationBenchmarking/releases/tag/v0.8.1), where only the sources are provided.
+You can download it from our [Maven repository]({{ site.baseurl }}/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.1/index.html), which includes a stand-alone binary, or from [GitHub](https://github.com/optimizationBenchmarking/optimizationBenchmarking/releases/tag/v0.8.1), where only the sources are provided.
 
 The new release has some exciting new functionality (this is not hipster-buzzword-speak, I am truly a bit excited that this works):
 
