--- a/src/main/resources/org/optimizationBenchmarking/utils/document/impl/latex/figureSeries.sty
+++ b/src/main/resources/org/optimizationBenchmarking/utils/document/impl/latex/figureSeries.sty
@@ -26,8 +26,7 @@
 %% 
 \NeedsTeXFormat{LaTeX2e}[1999/12/01]
 \ProvidesPackage{figureSeries}
-    [2015/02/13 v0.9.2 Provides a floating, figure*-like construct that can break over multiple pages]
-%% In order to create some placeholder text in the examples, we use the |lipsum| command from package
+    [2015/07/07 v0.9.3 Provides a floating, figure*-like construct that can break over multiple pages]
 \newif\if@figSer@captionCompatibilityFalse%
 \@figSer@captionCompatibilityFalsefalse%
 \ifx\spnewtheorem\@undefined%
@@ -42,6 +41,8 @@
 \RequirePackage{subcaption}%
 \DeclareCaptionSubType*[arabic]{figure}%
 \RequirePackage{afterpage}%
+\RequirePackage{everypage}%
+\RequirePackage{placeins}%
 \long\gdef\figureSeriesElement#1#2{%
 \strut\hfill\strut%
 \edef\@captype{figure}%
@@ -72,6 +73,7 @@
 \fi%
 }%
 \long\gdef\figureSeriesFloat#1#2{%
+\AddThispageHook{\FloatBarrier}%
 \@figSer@detectColumns%
 \if@figSer@isTwoColumns%
 \@figSer@floatTwoCol{#1}{#2}%
