Transition to Release 0.8.3
This commit marks the transition to release of version 0.8.3 of our
software. It also brings along some better modularization and
consolidation of our web site's structure. Mainly, the text of releases
is outsourced into include files which are then used in corresponding
blog posts and Maven repository pages.

--- a/_posts/2015-06-01-release-0.8.0.md
+++ b/_posts/2015-06-01-release-0.8.0.md
@@ -4,9 +4,5 @@ title:  "Alpha Release: Version 0.8.0"
 date:   2015-06-01
 categories: page
 ---
-
-The first [alpha version](https://github.com/optimizationBenchmarking/optimizationBenchmarking/releases/tag/v0.8.0) of the *optimizationBenchmarking.org* evaluator has been released, together with a first version of the project introduction slides and two examples.
-
-You can download this version from our [Maven repository]({{ site.baseurl }}/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.0/index.html), which includes a stand-alone binary, or from [GitHub](https://github.com/optimizationBenchmarking/optimizationBenchmarking/releases/tag/v0.8.0), where only the sources are provided.
-
-This version is already functional although it still lacks some major features and *may* be buggy. The generated reports are still empty except for the figures, several features of the [TSP Suite](https://github.com/optimizationBenchmarking/tspSuite) evaluator are missing and will be implemented step-by-step into this more general evaluator component.
+{% include 0.8.0.md %} 
+{% include repositoryDownloads.md projectVersion="0.8.0" %}
