--- a/_posts/2015-06-01-release-0.8.0.md
+++ b/_posts/2015-06-01-release-0.8.0.md
@@ -5,4 +5,4 @@ date:   2015-06-01
 categories: page
 ---
 {% include 0.8.0.md %} 
-{% include repositoryDownloads.md projectVersion="0.8.0" %}
+{% include repositoryDownloads.md projectVersion="0.8.0" hasGUI="false" %}
