--- a/_posts/2015-06-28-release-0.8.1.md
+++ b/_posts/2015-06-28-release-0.8.1.md
@@ -5,4 +5,4 @@ date:   2015-06-28
 categories: page
 ---
 {% include 0.8.1.md %}
-{% include repositoryDownloads.md projectVersion="0.8.1" %}
+{% include repositoryDownloads.md projectVersion="0.8.1" hasGUI="false" %}
