--- a/_posts/2015-07-05-release-0.8.2.md
+++ b/_posts/2015-07-05-release-0.8.2.md
@@ -5,4 +5,4 @@ date:   2015-07-05
 categories: page
 ---
 {% include 0.8.2.md %}
-{% include repositoryDownloads.md projectVersion="0.8.2" %}
+{% include repositoryDownloads.md projectVersion="0.8.2" hasGUI="false" %}
