--- a/_posts/2015-07-14-release-0.8.3.md
+++ b/_posts/2015-07-14-release-0.8.3.md
@@ -5,4 +5,4 @@ date:   2015-07-14
 categories: page
 ---
 {% include 0.8.3.md %}
-{% include repositoryDownloads.md projectVersion="0.8.3" %}
+{% include repositoryDownloads.md projectVersion="0.8.3" hasGUI="false" %}
