Fixed error in markup

--- a/_includes/0.8.4.md
+++ b/_includes/0.8.4.md
@@ -15,6 +15,6 @@ Like the original command line application, the GUI comes as stand-alone `jar`, 
 ## Improvements to the Core
 
 One visible improvement to the core is that diagrams which illustrate functions (such as the ECDF or the progress of a statistical parameter over time) now can either be plotted as-is
-or as "ranking plots". In a ranking plot, instead of illustrating the actual values of the functions, we plot their rank. This can help you to distinguish visually similar values easily. A situation where this may come in handy is the following: Assume you want to compare optimization algorithms solving the [TSP](https://en.wikipedia.org/wiki/Travelling_salesman_problem). They may start at really bad solutions, where the objective value may be 200 times as high than the optimum, i.e., <code>f/f*=200</code>. As time goes by, they may get very close to the optimum, <code>1&#x2264;f/f*&#x2264;1.001</code>. If we have values as large as 200 and as small as 1.001 in one diagram, it will be virtually impossible to distinguish 1.001 from 1.002. In a ranking plot, that won't be a problem.
+or as "ranking plots". In a ranking plot, instead of illustrating the actual values of the functions, we plot their rank. This can help you to distinguish visually similar values easily. A situation where this may come in handy is the following: Assume you want to compare optimization algorithms solving the [TSP](https://en.wikipedia.org/wiki/Travelling_salesman_problem). They may start at really bad solutions, where the objective value may be 200 times as high than the optimum, i.e., <code>f/f<sup>&#x2a;</sup>=200</code>. As time goes by, they may get very close to the optimum, <code>1&#x2264;f/f<sup>&#x2a;</sup>&#x2264;1.001</code>. If we have values as large as 200 and as small as 1.001 in one diagram, it will be virtually impossible to distinguish 1.001 from 1.002. In a ranking plot, that won't be a problem.
 
 Besides this visual changes there have been a few minor improvements and bug fixes.
